# jaxproxqp

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: solve_qp_example.py
src/jaxproxqp/: jaxproxqp.py  qp_problems.py  qp_types.py  settings.py  workspace.py
src/jaxproxqp/precond/: ruiz.py
src/jaxproxqp/utils/: jax_math_utils.py  jax_types.py  logger_utils.py  print_debug.py
test/: ruiz.py
